--- a/app/templates/inventory.html
+++ b/app/templates/inventory.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% import 'macros.html' as macros %}
 
 {% block title %}Inventory{% endblock %}
 
@@ -7,45 +8,96 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Inventory</h1>
 
-    <div class="form-container">
-        <form action="/inventory_update" method="post">
-            <table>
-                <tr>
-                    <th>Item</th>
-                    <th>Quantity</th>
-                </tr>
-                {% for item in items %}
-                    <tr>
-                        <td>{{ item.name }}</td>
-                        <td><input type="number" name="{{ item.id }}" value="{{ item.quantity }}"></td>
-                    </tr>
-                {% endfor %}
-            </table>
-            <input type="submit" value="Update">
-        </form>
-    </div>
+    {% include 'modals/product_modal.html' %}
 
-    <div class="">
-        <h1>Products</h1>
-        <table>
-            <tr>
-                <th>Flavor</th>
-                <th>Price</th>
-                <th>Quantity</th>
-            </tr>
-            {% if products %}
-                {% for product in products %}
-                    <tr>
-                        <td>{{ product.flavor }}</td>
-                        <td>{{ product.price }}</td>
-                        <td>{{ product.quantity }}</td>
-                    </tr>
-                {% endfor %}
-            {% else %}
-                No products
-            {% endif %}
-        </table>
+    <!-- Sticky header -->
+    <header class="navbar sticky-top bg-dark flex-md-nowrap p-0 shadow">
+        <h2 class="sticky-navbar-header">Ice Track</h2>
+        <!-- Button to toggle offcanvas -->
+        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasSidebar" aria-controls="offcanvasSidebar">
+            <!-- hamburger icon -->
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </header>
+
+    <!-- Main content container -->
+    <div class="container-md">
+
+        <!-- Offcanvas sidebar -->
+        {% include 'navbar.html' %}
+
+        <!-- Main content -->
+        <main class="ms-sm-auto px-md-4 pt-md-3">
+            <div class="align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <!-- Banner header -->
+                <h1>Inventory</h1>
+            </div>
+
+            <!-- Key Metrics Cards -->
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 gap-4">
+                {{ macros.metrics_card('Metric 1', 'text 1') }}
+                {{ macros.metrics_card('Metric 2', 'text 2') }}
+                {{ macros.metrics_card('Metric 3', 'text 3') }}
+            </div>
+
+            <!-- Inventory Update Fields -->
+            <!-- <div class="form-container">
+                <form action="/inventory_update" method="post">
+                    <table>
+                        <tr>
+                            <th>Item</th>
+                            <th>Quantity</th>
+                        </tr>
+                        {% for item in items %}
+                            <tr>
+                                <td>{{ item.name }}</td>
+                                <td><input type="number" name="{{ item.id }}" value="{{ item.quantity }}"></td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                    <input type="submit" value="Update">
+                </form>
+            </div> -->
+
+            <!-- Inventory Add Modal -->
+            {% include 'modals/add_modal.html' %}
+
+            <!-- Inventory Table -->
+            <div class="mt-5">
+                <!-- inline container for title and modal button -->
+                <div class="d-flex justify-content-between">
+                    <h1>Products</h1>
+                    <button type="button" class="btn modal-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">+ New</button>
+                </div>
+                <table class="table table-hover table-borderless">
+                    {% if products %}
+                    <thead>
+                        {% for key in products[0].keys() %}
+                            {% if key not in ['id'] %}
+                                <th scope="col">{{ key.capitalize() }}</th>
+                            {% endif %}
+                        {% endfor %}
+                    </thead>
+                    <tbody>
+                        {% for product in products %}
+                            {% set outer_index = loop.index - 1 %}
+                            <tr onclick="openModal({{ product }}, {{ product['id'] }})" id="row-{{ outer_index }}">
+                                <td>{{ product.flavor }}</td>
+                                <td>{{ product.price }}</td>
+                                <td>{{ product.quantity }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                    {% else %}
+                        No products found.
+                    {% endif %}
+                </table>
+            </div>
+        </main>
     </div>
+{% endblock %}
+
+{% block scripts %}
+    <script src="{{ url_for('static', filename='js/inventory.js') }}"></script>
 {% endblock %}
