--- a/app/templates/modals/product_modal.html
+++ b/app/templates/modals/product_modal.html
@@ -17,7 +17,7 @@
                     <p>Product ID: <span id="product-id-display"></span></p>
 
                     <!-- Form of modifiable inputs (preset to current product attributes)-->
-                    <form method="POST" action="/inventory_update">
+                    <form id="updateForm" method="POST" action="/inventory_update">
                         <input type="hidden" name="product-id" class="product-id" id="product-id">
                         <div class="form-group">
                             <label for="product-flavor">Flavor</label>
@@ -41,15 +41,22 @@
                                    id="product-quantity"
                                    name="product-quantity">
                         </div>
-                    </div>
+                    </form>
 
-                    <!-- Button to submit form -->
-                    <button type="submit" class="btn btn-primary">Save Changes</button>
+                    <form id="deleteForm" method="POST" action="/inventory_delete">
+                        <input type="hidden" name="product-id-delete" id="product-id-delete">
+                        <!-- Button to delete product from inventory -->
+                        <button type="submit" class="btn btn-danger delete-btn" href="/inventory_delete">Delete Product</button>
+                    </form>
+                </div>
             </div>
 
-            <!-- Button to close the modal -->
+            <!-- Modal Footer Buttons -->
             <div class="modal-footer">
                 <button type="button" class="btn" data-dismiss="modal" onclick="closeModal()">Close</button>
+
+                <!-- Button to submit form -->
+                <button type="button" class="btn btn-primary" onclick="document.querySelector('#updateForm').submit();">Save Changes</button>
             </div>
         </div>
     </div>
