--- a/app/static/css/auth.css
+++ b/app/static/css/auth.css
@@ -1,15 +1,12 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0
 }
 
 html, 
 body {
     height: 100%;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .auth-container {
@@ -17,11 +14,11 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 0 auto;
+    margin: auto;
     box-sizing: border-box;
     max-width: 100%;
     max-height: 100%;
-    overflow: hidden;
+    padding-top: 100px;
 }
 
 .auth-title {
