--- a/app/templates/shipments.html
+++ b/app/templates/shipments.html
@@ -57,7 +57,7 @@
             <div class="mt-5">
                 <!-- inline container for title and modal button -->
                 <div class="d-flex justify-content-between">
-                    <h1>Products</h1>
+                    <h1>Shipment History</h1>
                     <button type="button" class="btn modal-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">+ New</button>
                 </div>
                 <table class="table table-hover table-borderless">
