--- a/app/templates/tickets.html
+++ b/app/templates/tickets.html
@@ -21,7 +21,7 @@
         <main class="ms-sm-auto px-md-4 pt-md-3">
             <div class="align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <!-- Banner header -->
-                <h1>Trouble Tickets</h1>
+                <h1>Customer Support</h1>
             </div>
 
             <!-- Key Metrics Cards -->
@@ -57,7 +57,7 @@
             <div class="mt-5">
                 <!-- inline container for title and modal button -->
                 <div class="d-flex justify-content-between">
-                    <h1>Products</h1>
+                    <h1>Ticket History</h1>
                     <button type="button" class="btn modal-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">+ New</button>
                 </div>
                 <table class="table table-hover table-borderless">
@@ -80,7 +80,7 @@
                         {% endfor %}
                     </tbody>
                     {% else %}
-                        No products found.
+                        No Outstanding Tickets.
                     {% endif %}
                 </table>
             </div>
