--- a/app/templates/modals/add_modal.html
+++ b/app/templates/modals/add_modal.html
@@ -6,11 +6,46 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <p>Modal body text goes here.</p>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-            <button type="button" class="btn btn-primary">Add</button>
+
+            <!-- Form to allow user to add a new inventory item -->
+            <form action="{{ url_for('inventory.inventory_add_product') }}" method="POST" id="addInventoryForm">
+                <div class="modal-body">
+
+                        <!-- Product Flavor -->
+                        <div class="mb-3">
+                            <label for="product-flavor" class="form-label">Flavor</label>
+                            <input type="text"
+                                   class="form-control"
+                                   id="product-flavor"
+                                   name="product-flavor" required>
+                        </div>
+
+                        <!-- Product Price -->
+                        <div class="mb-3">
+                            <label for="product-price" class="form-label">Price</label>
+                            <input type="number" step="0.01"
+                                   class="form-control"
+                                   id="product-price"
+                                   name="product-price" 
+                                   min="0" pattern="^\d+(\.\d{1,2})?$" required>
+                        </div>
+
+                        <!-- Product Quantity -->
+                        <div class="mb-3">
+                            <label for="product-quantity" class="form-label">Quantity</label>
+                            <input type="number"
+                                   class="form-control"
+                                   id="product-quantity"
+                                   name="product-quantity" required>
+                        </div>
+                </div>
+
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary">Add Item</button>
+                </div>
+            </form>
         </div>
         </div>
     </div>
