--- a/app/templates/modals/orders_modal.html
+++ b/app/templates/modals/orders_modal.html
@@ -1,48 +1,118 @@
-<!-- Add New Data Modal -->
-<div class="modal fade" id="addDataModal" tabindex="-1" aria-labelledby="addDataModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+<div class="modal" id="exampleModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="addDataModalLabel">Add New Order</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form id="addDataForm">
-                    <div class="mb-3">
-                        <label for="customerName" class="form-label">Customer Name</label>
-                        <input type="text" class="form-control" id="customerName" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="shippingAddress" class="form-label">Shipping Address</label>
-                        <input type="text" class="form-control" id="shippingAddress" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="billingAddress" class="form-label">Billing Address</label>
-                        <input type="text" class="form-control" id="billingAddress" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="flavor" class="form-label">Flavor</label>
-                        <input type="text" class="form-control" id="flavor" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="size" class="form-label">Size</label>
-                        <input type="text" class="form-control" id="size" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="quantity" class="form-label">Quantity</label>
-                        <input type="number" class="form-control" id="quantity" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="cost" class="form-label">Cost</label>
-                        <input type="number" step="0.01" class="form-control" id="cost" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="estimatedShippingDate" class="form-label">Estimated Shipping Date</label>
-                        <input type="date" class="form-control" id="estimatedShippingDate" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Add Order</button>
-                </form>
-            </div>
+        <div class="modal-header">
+            <h5 class="modal-title">Add Item</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+
+            <!-- Form to allow user to add a new inventory item -->
+            <form action="{{ url_for('inventory.add_order') }}" method="POST" id="addInventoryForm">
+                <div class="modal-body">
+
+                        <!-- Customer Name -->
+                        <div class="mb-3">
+                            <label for="customer-name" class="form-label">Customer Name</label>
+                            <input type="text"
+                                   class="form-control"
+                                   id="customer-name"
+                                   name="customer-name" required>
+                        </div>
+
+                        <!-- Shipping Address -->
+                        <div class="mb-3">
+                            <label for="shipping-address" class="form-label">Shipping Address</label>
+                            <input type="text"
+                                   class="form-control"
+                                   id="shipping-address"
+                                   name="shipping-address" required>
+                        </div>
+
+                        <!-- Billing Address -->
+                        <div class="mb-3">
+                            <label for="billing-address" class="form-label">Billing Address</label>
+                            <input type="text"
+                                   class="form-control"
+                                   id="billing-address"
+                                   name="billing-address" required>
+                        </div>
+
+                        <!-- Item -->
+                        <div class="mb-3">
+                            <label for="item" class="form-label">Item</label>
+                            <input type="text"
+                                   class="form-control"
+                                   id="item"
+                                   name="item" required>
+                        </div>
+
+                        <!-- Flavor -->
+                        <div class="mb-3">
+                            <label for="flavor" class="form-label">Flavor</label>
+                            <input type="text"
+                                   class="form-control"
+                                   id="flavor"
+                                   name="flavor" required>
+                        </div>
+
+                        <!-- Size -->
+                        <div class="mb-3">
+                            <label for="size" class="form-label">Size</label>
+                            <input type="text"
+                                   class="form-control"
+                                   id="size"
+                                   name="size" required>
+                        </div>
+
+                        <!-- Product Quantity -->
+                        <div class="mb-3">
+                            <label for="product-quantity" class="form-label">Quantity</label>
+                            <input type="number"
+                                   class="form-control"
+                                   id="product-quantity"
+                                   name="product-quantity" required>
+                        </div>
+
+                        <!-- Cost -->
+                        <div class="mb-3">
+                            <label for="cost" class="form-label">Cost</label>
+                            <input type="number" step="0.01"
+                                   class="form-control"
+                                   id="cost"
+                                   name="cost" 
+                                   min="0" pattern="^\d+(\.\d{1,2})?$" required>
+                        </div>
+
+                        <!-- Estimated Shipping Date -->
+                        <div class="mb-3">
+                            <label for="shipping-date" class="form-label">Shipping Date</label>
+                            <input type="text"
+                                    class="form-control"
+                                    id="shipping-date"
+                                    name="shipping-date" 
+                                    placeholder="MM/DD/YYYY"
+                                    pattern="^(0[1-9]|1[0-2])/(0[1-9]|[12][0-9]|3[01])/\d{4}$" required>
+                        </div>
+
+                        <!-- Shipping Cost -->
+                        <div class="mb-3">
+                            <label for="shipping-cost" class="form-label">Shipping Cost</label>
+                            <input type="number" step="0.01"
+                                   class="form-control"
+                                   id="shipping-cost"
+                                   name="shipping-cost" 
+                                   min="0" pattern="^\d+(\.\d{1,2})?$" required>
+                        </div>
+                </div>
+
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn btn-primary">Add Item</button>
+                </div>
+            </form>
+        </div>
         </div>
     </div>
 </div>
