Updated product model attributes, inventory add/delete functionality, jinja custom filters

--- a/app/static/css/inventory.css
+++ b/app/static/css/inventory.css
@@ -22,6 +22,8 @@
     cursor: pointer;
 }
 
-.delete-btn {
-    margin-top: 1rem;
-}
+/* #deleteForm {
+    display: flex;
+    align-items: start;
+    justify-content: left;
+} */
