--- a/app/templates/inventory.html
+++ b/app/templates/inventory.html
@@ -31,25 +31,6 @@
                 {{ macros.metrics_card('Metric 3', 'text 3') }}
             </div>
 
-            <!-- Inventory Update Fields -->
-            <!-- <div class="form-container">
-                <form action="/inventory_update" method="post">
-                    <table>
-                        <tr>
-                            <th>Item</th>
-                            <th>Quantity</th>
-                        </tr>
-                        {% for item in items %}
-                            <tr>
-                                <td>{{ item.name }}</td>
-                                <td><input type="number" name="{{ item.id }}" value="{{ item.quantity }}"></td>
-                            </tr>
-                        {% endfor %}
-                    </table>
-                    <input type="submit" value="Update">
-                </form>
-            </div> -->
-
             <!-- Inventory Add Modal -->
             {% include 'modals/add_modal.html' %}
 
@@ -60,12 +41,32 @@
                     <h1>Products</h1>
                     <button type="button" class="btn modal-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">+ New</button>
                 </div>
+
+                <!-- Dropdown for 'Filter By' functionality -->
+                <div class="dropdown mt-3">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        Filter By
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+
+                        {% if products %}
+                            {% for key in products[0].keys() %}
+                                {% if key not in ['id', 'disposition', 'deleted_at'] %}
+                                    <li><a class="dropdown-item" href="/inventory?filter={{ key }}">{{ key | attribute }}</a></li>
+                                {% endif %}
+                            {% endfor %}
+                        {% endif %}
+
+                    </ul>
+                </div>
+
+                <!-- Table for inventory products -->
                 <table class="table table-hover table-borderless">
                     {% if products %}
                     <thead>
                         {% for key in products[0].keys() %}
-                            {% if key not in ['id'] %}
-                                <th scope="col">{{ key.capitalize() }}</th>
+                            {% if key not in ['id', 'disposition', 'deleted_at'] %}
+                                <th scope="col">{{ key | attribute }}</th>
                             {% endif %}
                         {% endfor %}
                     </thead>
@@ -74,8 +75,9 @@
                             {% set outer_index = loop.index - 1 %}
                             <tr onclick="openModal({{ product }}, {{ product['id'] }})" id="row-{{ outer_index }}">
                                 <td>{{ product.flavor }}</td>
-                                <td>{{ product.price }}</td>
+                                <td>{{ product.price | currency}}</td>
                                 <td>{{ product.quantity }}</td>
+                                <td>{{ product.status }}</td>
                             </tr>
                         {% endfor %}
                     </tbody>
