--- a/app/templates/tickets/tickets.html
+++ b/app/templates/tickets/tickets.html
@@ -24,6 +24,13 @@
                 <h1>Customer Support</h1>
             </div>
 
+            <!-- Key Metrics Cards -->
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 gap-4">
+                {{ macros.metrics_card('Metric 1', 'text 1') }}
+                {{ macros.metrics_card('Metric 2', 'text 2') }}
+                {{ macros.metrics_card('Metric 3', 'text 3') }}
+            </div>
+
             <!-- Inventory Add Modal -->
             <!-- include here -->
 
@@ -34,12 +41,32 @@
                     <h1>Ticket History</h1>
                     <button type="button" class="btn modal-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">+ New</button>
                 </div>
+
+                <!-- Dropdown for 'Filter By' functionality -->
+                <div class="dropdown mt-3">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        Filter By
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+
+                        {% if products %}
+                            {% for key in products[0].keys() %}
+                                {% if key not in ['id', 'disposition', 'deleted_at'] %}
+                                    <li><a class="dropdown-item" href="/inventory?filter={{ key }}">{{ key | attribute }}</a></li>
+                                {% endif %}
+                            {% endfor %}
+                        {% endif %}
+
+                    </ul>
+                </div>
+
+                <!-- Table for inventory products -->
                 <table class="table table-hover table-borderless">
                     {% if products %}
                     <thead>
                         {% for key in products[0].keys() %}
-                            {% if key not in ['id'] %}
-                                <th scope="col">{{ key.capitalize() }}</th>
+                            {% if key not in ['id', 'disposition', 'deleted_at'] %}
+                                <th scope="col">{{ key | attribute }}</th>
                             {% endif %}
                         {% endfor %}
                     </thead>
@@ -48,8 +75,9 @@
                             {% set outer_index = loop.index - 1 %}
                             <tr onclick="openModal({{ product }}, {{ product['id'] }})" id="row-{{ outer_index }}">
                                 <td>{{ product.flavor }}</td>
-                                <td>{{ product.price }}</td>
+                                <td>{{ product.price | currency}}</td>
                                 <td>{{ product.quantity }}</td>
+                                <td>{{ product.status }}</td>
                             </tr>
                         {% endfor %}
                     </tbody>
