--- a/app/static/css/inventory.css
+++ b/app/static/css/inventory.css
@@ -27,3 +27,12 @@
     align-items: start;
     justify-content: left;
 } */
+
+.modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.5);
+    height: 100vh;
+    width: 100vw;
+  }
