--- a/app/templates/orders.html
+++ b/app/templates/orders.html
@@ -9,6 +9,7 @@
 
 {% block content %}
 
+    {% include 'modals/customer_modal.html' %}
     {% include 'modals/orders_modal.html' %}
 
     <!-- Main content container -->
@@ -21,72 +22,75 @@
         <main class="ms-sm-auto px-md-4 pt-md-3">
             <div class="align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <!-- Banner header -->
-                <h1>Orders</h1>
+                <h1>Orders and Customer Status</h1>
             </div>
-
-            <!-- Key Metrics Cards -->
-            <ul class="metric-box-list">
-                <li class="metric-box">
-                    {{ macros.metrics_card('Metric 1', 'text 1') }}
-                </li>
-                <li class="metric-box">
-                    {{ macros.metrics_card('Metric 2', 'text 2') }}
-                </li>
-                <li class="metric-box">
-                    {{ macros.metrics_card('Metric 3', 'text 3') }}
-                </li>
-            </ul>
-
-            <!-- Inventory Update Fields -->
-            <!-- <div class="form-container">
-                <form action="/inventory_update" method="post">
-                    <table>
-                        <tr>
-                            <th>Item</th>
-                            <th>Quantity</th>
-                        </tr>
-                        {% for item in items %}
-                            <tr>
-                                <td>{{ item.name }}</td>
-                                <td><input type="number" name="{{ item.id }}" value="{{ item.quantity }}"></td>
-                            </tr>
-                        {% endfor %}
-                    </table>
-                    <input type="submit" value="Update">
-                </form>
-            </div> -->
-
-            <!-- Inventory Add Modal -->
-            {% include 'modals/add_modal.html' %}
-
-            <!-- Inventory Table -->
+            
             <div class="mt-5">
                 <!-- inline container for title and modal button -->
                 <div class="d-flex justify-content-between">
-                    <h1>Order History</h1>
-                    <button type="button" class="btn modal-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">+ New</button>
+                    <h1>Customers</h1>
+                    <button type="button" class="btn modal-btn" data-bs-toggle="modal" data-bs-target="#customerModal">+ New</button>
                 </div>
                 <table class="table table-hover table-borderless">
-                    {% if products %}
+                    {% if customers %}
                     <thead>
-                        {% for key in products[0].keys() %}
+                        {% for key in customers[0].keys() %}
                             {% if key not in ['id'] %}
                                 <th scope="col">{{ key.capitalize() }}</th>
                             {% endif %}
                         {% endfor %}
                     </thead>
                     <tbody>
-                        {% for product in products %}
+                        {% for customer in customers %}
                             {% set outer_index = loop.index - 1 %}
                             <tr onclick="openModal({{ product }}, {{ product['id'] }})" id="row-{{ outer_index }}">
-                                <td>{{ product.flavor }}</td>
-                                <td>{{ product.price }}</td>
-                                <td>{{ product.quantity }}</td>
+                                <td>{{ customer.name }}</td>
+                                <td>{{ customer.status }}</td>
+                                <td>{{ customer.shipping_address }}</td>
+                                <td>{{ customer.billing_address }}</td>
                             </tr>
                         {% endfor %}
                     </tbody>
                     {% else %}
-                        No products found.
+                        No customers found.
+                    {% endif %}
+                </table>
+            </div>
+
+            
+
+            <!-- Inventory Table -->
+            <div class="mt-5">
+                <!-- inline container for title and modal button -->
+                <div class="d-flex justify-content-between">
+                    <h1>Orders</h1>
+                    <button type="button" class="btn modal-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">+ New</button>
+                </div>
+                <table class="table table-hover table-borderless">
+                    {% if orders %}
+                    <thead>
+                        {% for key in orders[0].keys() %}
+                            {% if key not in ['id'] %}
+                                <th scope="col">{{ key.capitalize() }}</th>
+                            {% endif %}
+                        {% endfor %}
+                    </thead>
+                    <tbody>
+                        {% for order in orders %}
+                            {% set outer_index = loop.index - 1 %}
+                            <tr onclick="openModal({{ product }}, {{ product['id'] }})" id="row-{{ outer_index }}">
+                                <td>{{ order.flavor }}</td>
+                                <td>{{ order.container_size }}</td>
+                                <td>{{ order.quantity }}</td>
+                                <td>{{ order.cost }}</td>
+                                <td>{{ order.shipping_type }}</td>
+                                <td>{{ order.shipping_date }}</td>
+                                <td>{{ order.shipping_cost }}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                    {% else %}
+                        No outstanding orders.
                     {% endif %}
                 </table>
             </div>
