--- a/app/static/css/inventory.css
+++ b/app/static/css/inventory.css
@@ -21,3 +21,12 @@
     padding: 0.5rem 0.8rem;
     cursor: pointer;
 }
+
+.modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.5);
+    height: 100vh;
+    width: 100vw;
+  }
