--- a/app/templates/modals/product_modal.html
+++ b/app/templates/modals/product_modal.html
@@ -1,13 +1,10 @@
 <!-- POP-UP MODAL FOR TRANSACTIONS -->
-<div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-
-        <!-- Content box for modal -->
+<div class="modal" id="productModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-
-            <!-- Header for the modal -->
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Product Details</h5>
+                <h5 class="modal-title">Add Item</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" id="modalBody">
                 <!-- Product content will be inserted dynamically here -->
@@ -22,24 +19,24 @@
                         <div class="form-group">
                             <label for="product-flavor">Flavor</label>
                             <input type="text"
-                                   class="form-control product-flavor-input"
-                                   id="product-flavor"
-                                   name="product-flavor" required>
+                                class="form-control product-flavor-input"
+                                id="product-flavor"
+                                name="product-flavor" required>
                         </div>
                         <div class="form-group">
-                            <label for="product-price">Price ($ USD)</label>
+                            <label for="product-price">Price <em>($ USD)</em></label>
                             <input type="number" step="0.01"
-                                   class="form-control product-price-input"
-                                   id="product-price"
-                                   name="product-price"
-                                   min="0" pattern="^\d+(\.\d{1,2})?$" required>
+                                class="form-control product-price-input"
+                                id="product-price"
+                                name="product-price"
+                                min="0" pattern="^\d+(\.\d{1,2})?$" required>
                         </div>
                         <div class="form-group">
                             <label for="product-quantity">Quantity</label>
                             <input type="number"
-                                   class="form-control product-quantity-input"
-                                   id="product-quantity"
-                                   name="product-quantity" required>
+                                class="form-control product-quantity-input"
+                                id="product-quantity"
+                                name="product-quantity" required>
                         </div>
                     </form>
                 </div>
