Refactor order management: update form actions, enhance order data parsing, and improve modal functionality (cherry-picked danny's usage logging commit)

--- a/app/templates/modals/customer_modal.html
+++ b/app/templates/modals/customer_modal.html
@@ -7,7 +7,7 @@
         </div>
         <div class="modal-body">
             <!-- Form to allow user to add a new inventory item -->
-            <form action="{{ url_for('inventory.add_customer') }}" method="POST" id="addCustomerForm">
+            <form action="{{ url_for('inventory.inventory_add_customer') }}" method="POST" id="addCustomerForm">
                 <div class="columns">
                     <div class="column">
                         <h3>Customer Info</h3>
