--- a/app/templates/modals/orders_modal.html
+++ b/app/templates/modals/orders_modal.html
@@ -7,26 +7,29 @@
         </div>
         <div class="modal-body">
             <!-- Form to allow user to add a new inventory item -->
-            <form action="{{ url_for('inventory.add_order') }}" method="POST" id="addInventoryForm">
+            <form action="{{ url_for('orders.orders_add_order') }}" method="POST" id="addInventoryForm">
                 <div class="columns">
                     <div class="column">
                         <h3>Order Info</h3>
+                        <!-- TODO: hidden input for user id of sorts -->
+
                         <!-- Flavor -->
                         <div class="mb-3">
-                            <label for="flavor" class="form-label">Flavor</label>
-                            <input type="text"
-                                   class="form-control"
-                                   id="flavor"
-                                   name="flavor" required>
+                            <label for="flavor" class="form-label">Product</label>
+                            <select class="form-control" id="flavor" name="flavor" required>
+                                {% for product in products %}
+                                    <option value="{{ product.id }}">{{ product.flavor }}</option>
+                                {% endfor %}
+                            </select>
                         </div>
 
                         <!-- Size -->
                         <div class="mb-3">
                             <label for="size" class="form-label">Size</label>
-                            <input type="text"
-                                   class="form-control"
-                                   id="size"
-                                   name="size" required>
+                            <select class="form-control" id="size" name="size" required>
+                                <!-- default disabled option -->
+                                <option value="" disabled selected>Select a size</option>
+                            </select>
                         </div>
 
                         <!-- Product Quantity -->
