--- a/app/templates/orders.html
+++ b/app/templates/orders.html
@@ -59,12 +59,12 @@
 
             
 
-            <!-- Inventory Table -->
+            <!-- Orders Table -->
             <div class="mt-5">
                 <!-- inline container for title and modal button -->
                 <div class="d-flex justify-content-between">
                     <h1>Orders</h1>
-                    <button type="button" class="btn modal-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">+ New</button>
+                    <button type="button" class="btn modal-btn" data-bs-toggle="modal" data-bs-target="#ordersModal">+ New</button>
                 </div>
                 <table class="table table-hover table-borderless">
                     {% if orders %}
@@ -99,5 +99,5 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="{{ url_for('static', filename='js/inventory.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/orders.js') }}"></script>
 {% endblock %}
