--- a/app/templates/orders.html
+++ b/app/templates/orders.html
@@ -9,8 +9,8 @@
 
 {% block content %}
 
-    {% include 'modals/customer_modal.html' %}
-    {% include 'modals/orders_modal.html' %}
+    {% include 'modals/customers_add_modal.html' %}
+    {% include 'modals/orders_add_modal.html' %}
 
     <!-- Main content container -->
     <div class="container-md">
