--- a/app/templates/inventory.html
+++ b/app/templates/inventory.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 
-    {% include 'modals/product_modal.html' %}
+    {% include 'modals/inventory_update_modal.html' %}
 
     <!-- Main content container -->
     <div class="container-md">
@@ -32,7 +32,7 @@
             </div>
 
             <!-- Inventory Add Modal -->
-            {% include 'modals/add_modal.html' %}
+            {% include 'modals/inventory_add_modal.html' %}
 
             <!-- Inventory Table -->
             <div class="mt-5">
@@ -75,6 +75,7 @@
                             {% set outer_index = loop.index - 1 %}
                             <tr onclick="openModal({{ product }}, {{ product['id'] }})" id="row-{{ outer_index }}">
                                 <td>{{ product.flavor }}</td>
+                                <td>{{ product.container_size }}</td>
                                 <td>{{ product.price | currency}}</td>
                                 <td>{{ product.quantity }}</td>
                                 <td>{{ product.status }}</td>
