Refactor templates and endpoints: reorganize template structure, update render paths, and enhance modal functionality

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,13 +23,13 @@
 </head>
 <body>
 
-    {% include 'navbar.html' %}
+    {% include 'components/navbar.html' %}
 
     <!-- Main Content -->
     <main>
 
         <!-- Header -->
-        {% include 'header.html' %}
+        {% include 'components/header.html' %}
 
         <!-- Other page content to be added -->
         {% block content %}
