--- a/app/templates/inventory/modals/inventory_update_modal.html
+++ b/app/templates/inventory/modals/inventory_update_modal.html
@@ -38,6 +38,25 @@
                                 id="product-quantity"
                                 name="product-quantity" required>
                         </div>
+                        <div class="form-group">
+                            <label for="product-status">Container Size</label>
+                            <select class="form-control product-container-size-input" 
+                                    id="product-container-size" 
+                                    name="product-container-size" required>
+                                <option value="small">small</option>
+                                <option value="medium">medium</option>
+                                <option value="large">large</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="product-status">Status</label>
+                            <select class="form-control product-status-input" 
+                                    id="product-status" 
+                                    name="product-status" required>
+                                <option value="actual">Actual</option>
+                                <option value="planned">Planned</option>
+                            </select>
+                        </div>
                     </form>
                 </div>
             </div>
