--- a/app/templates/inventory/inventory.html
+++ b/app/templates/inventory/inventory.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% import 'macros.html' as macros %}
+{% import 'components/macros.html' as macros %}
 
 {% block title %}Inventory{% endblock %}
 
@@ -9,13 +9,13 @@
 
 {% block content %}
 
-    {% include 'modals/inventory_update_modal.html' %}
+    {% include 'inventory/modals/inventory_update_modal.html' %}
 
     <!-- Main content container -->
     <div class="container-md">
 
         <!-- Offcanvas sidebar -->
-        {% include 'navbar.html' %}
+        {% include 'components/navbar.html' %}
 
         <!-- Main content -->
         <main class="ms-sm-auto px-md-4 pt-md-3">
@@ -32,7 +32,7 @@
             </div>
 
             <!-- Inventory Add Modal -->
-            {% include 'modals/inventory_add_modal.html' %}
+            {% include 'inventory/modals/inventory_add_modal.html' %}
 
             <!-- Inventory Table -->
             <div class="mt-5">
