--- a/app/templates/tickets/tickets.html
+++ b/app/templates/tickets/tickets.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% import 'macros.html' as macros %}
+{% import 'components/macros.html' as macros %}
 
 {% block title %}Trouble Tickets{% endblock %}
 
@@ -9,13 +9,13 @@
 
 {% block content %}
 
-    {% include 'modals/product_modal.html' %}
+    <!-- include here for modal -->
 
     <!-- Main content container -->
     <div class="container-md">
 
         <!-- Offcanvas sidebar -->
-        {% include 'navbar.html' %}
+        {% include 'components/navbar.html' %}
 
         <!-- Main content -->
         <main class="ms-sm-auto px-md-4 pt-md-3">
@@ -25,7 +25,7 @@
             </div>
 
             <!-- Inventory Add Modal -->
-            {% include 'modals/add_modal.html' %}
+            <!-- include here -->
 
             <!-- Inventory Table -->
             <div class="mt-5">
