Refactor admin dashboard and configuration management
- Updated links to point to the admin home instead of dashboard.
- Added AdminConfig model for managing admin configuration settings.
- Developed functionality to support an admin-maintained list of supported container sizes
- Implemented JavaScript for delete modal functionality in admin settings.
- Updated inventory update modal to dynamically load container sizes.
- Created utility functions to fetch admin configuration settings from the database.
- Modified inventory and order endpoints to filter out deleted products.

--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -23,7 +23,7 @@
             <!-- Admin dashboard only shows if current user is an admin -->
             {% if current_user.is_admin %}
             <li class="nav-item pb-md-2 pb-lg-3">
-                <a class="sidebar-nav-link nav-link" href="{{ url_for('admin.admin_dashboard') }}">Admin Dashboard</a>
+                <a class="sidebar-nav-link nav-link" href="{{ url_for('admin.admin_home') }}">Admin Dashboard</a>
             </li>
             {% endif %}
 
