--- a/app/templates/components/macros.html
+++ b/app/templates/components/macros.html
@@ -1,8 +1,34 @@
 {% macro metrics_card(title, text) %}
-    <div class="metrics-card card flex-grow-1 mx-1">
+    <div class="metrics-card card flex-grow-1 mx-1" style="max-width: 300px;">
         <div class="card-body">
-        <h5 class="card-title">{{ title }}</h5>
-        <p class="card-text">{{ text }}</p>
+            <h5 class="card-title">{{ title }}</h5>
+            <p class="card-text">{{ text }}</p>
         </div>
+    </div>
+{% endmacro %}
+
+{% macro message(text, type, redirect) %}
+
+    <!-- define the accepted message types -->
+    {% set valid_types = ["success", "info", "warning", "danger"] %}
+    {% set selected_type = "" %}
+
+    <!-- set the selected message type or default ("info") -->
+    {% if type in valid_types %}
+        {% set selected_type = type %}
+    {% else %}
+        {% set selected_type = "info" %}
+    {% endif %}
+
+    <!-- apply the message type, display the message -->
+    <div class="alert alert-{{ type }} alert-dismissible fade show" role="alert">
+        {{ text }}
+
+        <!-- if a redirect is passed, navigate to it to clear the URL parameters -->
+        {% if redirect %}
+            <a href="{{ redirect }}" class="btn-close"></a>
+        {% else %}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        {% endif %}
     </div>
 {% endmacro %}
